# cliniq-backend

./: fix_sessions.py  pyproject.toml  requirements.txt  seed_explore_fitness.py
app/: main.py  requirements.txt
app/core/: database.py  deps.py  llm_factory.py  security.py
app/models/: auth.py  chat.py  clinical.py  fitness.py  patient.py  roadmap.py
app/routes/: auth.py  chat.py  clinical.py  fitness.py  images.py  notes.py  patients.py  reports.py  roadmap.py  schedule.py  test.py  users.py  vision.py  voice.py
app/services/: ai_doctor.py  clinical_service.py  fitness_agent.py  patient_agent.py  rag.py  roadmap_agent.py
app/utils/: email.py
