[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "annotated-doc>=0.0.4",
    "anyio>=4.13.0",
    "bcrypt>=5.0.0",
    "certifi>=2026.4.22",
    "google-generativeai>=0.8.6",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
]
