[project]
name = "backend"
version = "0.1.0"
description = "HealthSync AI Clinical Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "motor>=3.7.0",
    "dnspython>=2.7.0",
    "pymongo>=4.12.0",
    "pydantic-settings>=2.8.0",
    "pydantic[email]>=2.13.0",
    "python-dotenv>=1.1.0",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "langchain-groq>=0.3.0",
    "python-multipart>=0.0.20",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "pyjwt>=2.12.0",
    "aiosmtplib>=3.0.0",
    "annotated-doc>=0.0.4",
    "anyio>=4.8.0",
    "certifi>=2024.0.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]
